fixed an issue with the footer alignement

--- a/css/style.scss
+++ b/css/style.scss
@@ -468,7 +468,7 @@ footer {
   align-items: center;
   justify-content: left;
   div {
-    display: inline-block;
+    display: flex;
     justify-content: space-evenly;
     align-items: left;
   }
